fix: truncate event description to 3 lines to prevent overflow

--- a/baequest/src/blocks/event.css
+++ b/baequest/src/blocks/event.css
@@ -163,9 +163,9 @@
   margin-bottom: 12px;
   line-height: 1.5;
   display: -webkit-box;
-   /* -webkit-line-clamp: 1;
-   -webkit-box-orient: vertical;
-  overflow: hidden;   */
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
   flex-grow: 0;
 }
 
